[package]
name = "eth_watcher"
version = "0.1.0"
edition = "2021"
autobins = true

[workspace]
members = [".", "migration", "entity"]

[dependencies]
migration = { path = "./migration" }
entities = { path = "./entity" }

chrono = { version = "0.4", features = ["default", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
deno_core = "0.174.0"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

web3 = "0.18"
ethers = "1.0"

# ORM
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }

[dev-dependencies]
ctor = "0.1"
